netalbum-client: генерация fileId на стороне клиента